<resources>
    <string name="app_name">SmartMedicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_ecology_button">Ekologicky</string>
    <string name="welcome_economy_button">Ekonomicky</string>
    <string name="welcome_fast_button">Rýchlo</string>
    <string name="welcome_button_login">PRIHLÁSENIE</string>

    <string name="ecology_title_main">Chránime našu planétu</string>
    <string name="ecology_title_subtitle1">Recyklácia</string>
    <string name="ecology_text_subtitle1">Keď Vám Vaše zariadenie doslúži postaráme sa o jeho recykláciu, rovnako postupujeme aj pri servise Vašich zariadení. Poškodené časti recyklujeme aby sa dali použiť na výrobu nových produktov</string>
    <string name="ecology_title_subtitle2">Carbon-free</string>
    <string name="ecology_text_subtitle2">Naša spoločnosť funguje "bezuhlíkovo" to znamená že pri našich činnostiach neprodukujeme žiaden uhlík. Používame výhradne len elektromobily a energie z obnoviteľných zdrojov.</string>

    <string name="economy_title_main">Šetríme Vaše peniaze</string>
    <string name="economy_title_subtitle1">Garancia najnižšej ceny</string>
    <string name="economy_text_subtitle1">U nás nikdy nepreplatíte, naše ceny pravidelne aktualizujeme a porovnávame s konkurenciou. Vďaka tomu Vám garantujeme nanjnižšie ceny.</string>
    <string name="economy_title_subtitle2">Osobitný prístup</string>
    <string name="economy_text_subtitle2"><br>Ponúkame Vám osobitný prístup aby sme čo najpresnejšie vyhoveli Vašim špecifickým požiadavkam. Vďaka našim transparentým službám vždy viete začo platíte.</br><br></br><br>O každom servisnom zásahu Vás vopred informujeme, oboznámime Vás s cenou, a až po Vašom súhlase zásah vykonáme.</br></string>

    <string name="fast_title_main">Šetríme Váš čas</string>
    <string name="fast_title_subtitle1">Priamo k Vašim dverám</string>
    <string name="fast_text_subtitle1">V prípade že si objendáte naše služby, nemusíte nikam chodiť, zariadenia od Vás prevezmeme osobne na dohodnutej adrese. Rovnaký proces je aj v prípade odovzdania opraveného zariadenia.</string>
    <string name="fast_title_subtitle2">Garancia 48 Hodín</string>
    <string name="fast_text_subtitle2">Pri bežných opravách máte u nás garanciu že Vám zariadenie odovzdáme opravené do 48hodín od jeho prijatia do servisu.</string>
    <string name="fast_title_subtitle3">Non-stop podpora</string>
    <string name="fast_text_subtitle3">Sme tu pre Vás 24 hodín denne, pokiaľ potrebujete poradiť alebo pomôcť na ďiaľku stačí nám zavolať na uvedené telefónne čísla, radi Vám poradíme.</string>

    <string name="login_welcome">Vitajte v aplikácií Smart Medic !</string>
    <string name="login_add_text">Pre pokračovanie sa prosím prihláste</string>
    <string name="login_field_name">Meno</string>
    <string name="login_field_pwd">Heslo</string>
    <string name="login_button_login">Prihlásiť</string>


    <string name="com_auth0_client_id">E3jXEWPwhz7DbDrP5t2GND0HRXEb05mS</string>
    <string name="com_auth0_domain">dev-dpmumsxt.eu.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>


    <string name="ticket_created">Vaša žiadosť bola úspešne odoslaná !</string>
    <string name="login_successfull">Boli ste úspešne prihlásený</string>

    <string name="menu_item_servis">Servis</string>
    <string name="menu_item_servis_history">Servisná história</string>
    <string name="menu_item_waterprooftest">Test vodeodolnosti</string>
    <string name="menu_item_about">O nás</string>

    <string name="list_item_servis_ticket_problem">Závada</string>
    <string name="list_item_servis_ticket_state">Stav</string>


    <string name="logout_successfull">Boli ste úspešne odhlásený</string>
    <string name="logout_fail">Nastala chyba pri odhlasovaní</string>

    <string name="ticket_state_sent">Odoslaný</string>
    <string name="ticket_state_in_progress">Pracujeme na oprave</string>
    <string name="ticket_state_servis_done">Oprava ukoncena</string>
    <string name="ticket_state_finished">Zariadenie odovzdané</string>
    <string name="ticket_state_unkown">Neznámy stav</string>

    <string name="device_brand">Značka zariadenia</string>
    <string name="device_model">Model</string>
    <string name="device_problem">Závada</string>
    <string name="device_problem_input_placerholder">Tu prosím bližšie popíšte závadu Vášho zariadenia ktorú chcete opraviť</string>
    <string name="device_ticket_note">Poznámka k servisu</string>
    <string name="device_ticket_note_input_placerholder">Do tohto políčka napíšte prosím dodatočné žiadosti k servisu, prípadne informácie o ktorých by sme mali vedieť</string>

    <string name="contact_name">Meno a priezvisko</string>
    <string name="contact_email">Email</string>
    <string name="contact_phone">Telefónne číslo</string>
    <string name="contact_address_pickup">Miesto vyzdvihnutia</string>

    <string name="title_danger">!!! UPOZORNENIE !!!</string>
    <string name="text_danger_waterproof_test">Tento test vykonávajte len na vlastné riziko, a na vlastnú zodpovednosť. Tvorca aplikácie nenesie žiadnu zodpovednosť za prípadné poškodenie zariadenia.</string>
    <string name="button_continue">Pokračovat</string>
    <string name="WPTesting_text">Opatrne zatlačte čo najväčšou silou na tlačidlo v strede obrazovky pomocou palcou na oboch rukách, tlačte kým Vás systém nevyzve v uvoľneniu tlačidla.</string>

    <string name="WPTesting_first_message">Pre začatie testu stlačte tlačidlo</string>
    <string name="WPTesting_test_fail">Test neúspešný, opakujte znova</string>
    <string name="WPTesting_test_pass">Test úspešný, gratulujeme vaše zariadenie je vodeodolné !</string>
    <string name="WPTesting_test_nopass">Test úspešný, bohužial vaše zariadenie nieje vodeodolné !</string>
    <string name="WPTesting_keep_pushing">Tlačte na tlačidlo</string>
    <string name="WPTesting_release">Uvoľnite tlačidlo</string>


    <string name="about_us_title">Kto vlastne sme ?</string>
    <string name="about_us_text">Sme firma ktorá sa zaoberá servisom výpočtovej techniky a mobilných zariadení. Pôsobíme na trhu už viac než 20 rokov ! Našim hlavným cieľom je zvyšovať Váš komfort vo svete IT, ponúkame vysokoprofesionálne služby s dlhoročnými skúsenostami. Máme ľudský prístup, primerané ceny a pokiaľ je to možné vieme Vám poradiť aj na diaľku. Náš tým sa skladá prevažne z expertov a technikov ktorý pre Vás robia servis a rovnako aj poradenstvo, vďaka tomu sa možte u nás spoľahnuť že ste vždy v kontakte s expertami.</string>

    <string name="servis_filter_mobil">Telefóny</string>
    <string name="servis_filter_pc">Počítače</string>
    <string name="servis_filter_console">Konzoly</string>

    <string name="button_servis_send_ticket">Odoslať</string>
    <string name="input_error_short_text">Text je príliš krátky</string>
    <string name="input_error_invalid_email">Neplatný email</string>
    <string name="input_error_invalid_number">Neplatné číslo</string>

    <string name="fragment_title_servis">Servis</string>
    <string name="fragment_title_servis_history">Servisná história</string>
    <string name="fragment_title_ticket_request1">Žiadosť o servis (1/2)</string>
    <string name="fragment_title_ticket_request2">Žiadosť o servis (2/2)</string>
    <string name="fragment_title_aboutus">O nás</string>
    <string name="fragment_title_waterTest">Test vodeodolnosti</string>


</resources>