<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>
        <variable
            name="contactInfoViewModel"
            type="com.example.smartmedicapp.app_ui.ticket.contactInfo.ContactInfoViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_device_brand"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText_contact_name"
            android:layout_width="281dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={contactInfoViewModel.contactName}"
            app:layout_constraintStart_toStartOf="@+id/textview_contact_name"
            app:layout_constraintTop_toBottomOf="@+id/textview_contact_name" />

        <EditText
            android:id="@+id/edittext_contact_email"
            android:layout_width="281dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={contactInfoViewModel.contactEmail}"
            app:layout_constraintStart_toStartOf="@+id/editText_contact_name"
            app:layout_constraintTop_toBottomOf="@+id/textview_contact_email" />

        <TextView
            android:id="@+id/textview_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/contact_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact_email"
            app:layout_constraintStart_toStartOf="@+id/textview_contact_name"
            app:layout_constraintTop_toBottomOf="@+id/editText_contact_name" />

        <TextView
            android:id="@+id/textview_contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contact_phone"
            app:layout_constraintStart_toStartOf="@+id/textview_contact_email"
            app:layout_constraintTop_toBottomOf="@+id/edittext_contact_email" />

        <TextView
            android:id="@+id/textview_contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:text="@string/contact_address_pickup"
            app:layout_constraintStart_toStartOf="@+id/textview_contact_email"
            app:layout_constraintTop_toBottomOf="@+id/edittext_contact_email" />

        <Button
            android:id="@+id/button_odoslat"
            android:layout_width="174dp"
            android:layout_height="44dp"
            android:layout_marginTop="56dp"
            android:enabled="@{ contactInfoViewModel.valid}"
            android:onClick="@{() -> contactInfoViewModel.onSendTicket()}"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_adress_pickup" />

        <EditText
            android:id="@+id/edittext_contact_phone"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:text="@={contactInfoViewModel.contactPhone}"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="@+id/edittext_contact_email"
            app:layout_constraintTop_toBottomOf="@+id/textview_contact_phone" />

        <EditText
            android:id="@+id/edittext_adress_pickup"
            android:text="@={contactInfoViewModel.contactAddressPickup}"
            android:layout_width="297dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="@+id/edittext_contact_phone"
            app:layout_constraintTop_toBottomOf="@+id/textview_contact_address" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
